# SplatCad-Frontend

./: .gitignore  package-lock.json  package.json  rollup.config.js
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/benches/: file_hash_bench.rs
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: file_diff.rs  file_diff_state.monopic  local_files.rs  mod.rs  types.rs
src-tauri/src/db/: compare.rs  mod.rs  persisted_state.rs  refresh_state.rs  setup.rs  types.rs
src/components/: TaskItem.svelte
src/lib/: fetch.ts
src/lib/auth/: auth_client.ts  auth_helpers.ts  auth_service.ts
src/lib/stores/: auth.ts  projects.ts  stores.ts
src/lib/stores/projects/: localFiles.ts  types.ts
src/routes/: Callback.svelte  Home.svelte
